--- a/README.Rmd
+++ b/README.Rmd
@@ -46,6 +46,144 @@ data_set <- read_rds("data/terra-preta.rds")
 glimpse(data_set)
 ```
 
+## Estatística Descritiva 
+
+### Hitograma
+
+```{r}
+nome_vars <- data_set |> select(-tratamentos) |> names()
+walk(nome_vars,~{
+  plot_hist <- data_set |> 
+  ggplot(aes(x=!!sym(.x), y= ..density..)) + 
+  geom_histogram(color="black", fill="aquamarine4",
+                 bins = 12) +
+  theme_minimal()
+  print(plot_hist)
+})
+
+```
+
+### Boxplot
+```{r}
+walk(nome_vars,~{
+  plot_box <- data_set |> 
+    ggplot(aes(x=tratamentos, y= !!sym(.x),fill=tratamentos)) + 
+    geom_boxplot() +
+    theme_minimal() +
+    theme(legend.position = "none") +
+    labs(x="Tratamentos")
+  print(plot_box)
+})
+```
+
+### Tabela da Estatistica Descriva
+
+```{r}
+estat_names <- c("Min","Q1","Med","Media","Q3",
+                 "Max","DP","CV","Skn","Krt")
+estat_desc <- function(x){
+  x<-na.omit(x)
+  m <- mean(x,na.rm = TRUE)
+  md <- median(x)
+  mini <- min(x,na.rm = TRUE)
+  q1 <- quantile(x,.25)
+  q3 <- quantile(x,.75)
+  maxi <- max(x,na.rm = TRUE)
+  dp <- sd(x,na.rm = TRUE)
+  cv <- 100*dp/m
+  ass <- agricolae::skewness(x)
+  curt <- agricolae::kurtosis(x)
+  c(mini,q1,md,m,q3,maxi,dp,cv,ass,curt)
+}
+
+data_set |> 
+  group_by(tratamentos) |> 
+  reframe( across(
+    .cols = ds:mg,
+    .fns = estat_desc,
+    .names = "{.col}"
+  )) |>
+  ungroup() |> 
+  add_column(estat = rep(estat_names,4)) |> 
+  relocate(estat) |> 
+  writexl::write_xlsx("output/estatistica-descritiva.xlsx")
+```
+
+
+### Matrix de Correlação com o Corrplot - Por tratamentos
+
+```{r}
+data_set |> 
+  filter(tratamentos == "LAR") |> 
+  select(ds:mg) |> 
+  cor(use = "complete.obs") |> 
+  corrplot::corrplot( method = "color",
+         outline = T,,
+         addgrid.col = "darkgray",cl.pos = "r", tl.col = "black",
+         tl.cex = 1, cl.cex = 1, type = "upper", bg="azure2",
+         diag = FALSE,
+         # addCoef.col = "black",
+         cl.ratio = 0.2,
+         cl.length = 5,
+         number.cex = 0.8)
+```
+```{r}
+data_set |> 
+  filter(tratamentos == "MAM") |> 
+  select(ds:mg) |> 
+  cor(use = "complete.obs") |> 
+  corrplot::corrplot( method = "color",
+         outline = T,,
+         addgrid.col = "darkgray",cl.pos = "r", tl.col = "black",
+         tl.cex = 1, cl.cex = 1, type = "upper", bg="azure2",
+         diag = FALSE,
+         # addCoef.col = "black",
+         cl.ratio = 0.2,
+         cl.length = 5,
+         number.cex = 0.8)
+```
+```{r}
+data_set |> 
+  filter(tratamentos == "MTA") |> 
+  select(ds:mg) |> 
+  cor(use = "complete.obs") |> 
+  corrplot::corrplot( method = "color",
+         outline = T,,
+         addgrid.col = "darkgray",cl.pos = "r", tl.col = "black",
+         tl.cex = 1, cl.cex = 1, type = "upper", bg="azure2",
+         diag = FALSE,
+         # addCoef.col = "black",
+         cl.ratio = 0.2,
+         cl.length = 5,
+         number.cex = 0.8)
+```
+
+
+```{r}
+data_set |> 
+  filter(tratamentos == "QAF") |> 
+  select(ds:mg) |> 
+  cor(use = "complete.obs") |> 
+  corrplot::corrplot( method = "color",
+         outline = T,,
+         addgrid.col = "darkgray",cl.pos = "r", tl.col = "black",
+         tl.cex = 1, cl.cex = 1, type = "upper", bg="azure2",
+         diag = FALSE,
+         # addCoef.col = "black",
+         cl.ratio = 0.2,
+         cl.length = 5,
+         number.cex = 0.8)
+```
+## Análise Multivariada
+
+### Análise de Cluster
+
+### Análise de Componentes Principais
+
+### Análise de Redundância
+
+### PLS - Partial Least Squares (mínimos quadrados parciais)
+
 
 
 
